# NetZ

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  common.h  s_socket.cpp  socket_server.cpp  test.cpp
common/: epoll_event.h  epoll_reactor.cpp  ievent.h
include/: accept_op.h  address.h  common.h  connect_op.h  connection_data.h  example_helper.h  game_connection.h  iconnection_handler.h  protocol.h  reactor.h  receive_op.h  s_socket.h  select_reactor.h  send_op.h  server_socket.h  socket.h  socket_address.h  socket_platform.h  socket_server.h  socket_service.h  stream_socket.h  utils.h
include/linux/: epoll_reactor.h  socket_linux.h
include/windows/: select_reactor.h
libraries/: CMakeLists.txt  common.h  timer.cpp  timer.h  utils.h
libraries/http/: CMakeLists.txt  common.h  http_common.cpp  http_common.h  http_connection.cpp  http_connection.h  http_parser.cpp  http_parser.h  http_server.cpp  http_server.h  request.cpp  request.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h
libraries/network/: CMakeLists.txt
libraries/network/include/: accept_op.h  address.h  connect_op.h  connection_data.h  datagram_socket.h  io_service.h  network.h  protocol.h  reactor.h  receive_op.h  receivefrom_op.h  send_op.h  sendto_op.h  server_socket.h  socket.h  socket_platform.h  socket_service.h  stream_socket.h  timer.h
libraries/network/include/linux/: epoll_reactor.h
libraries/network/include/windows/: select_reactor.h
libraries/network/src/: address.cpp  connection_data.cpp  socket.cpp  socket_service.cpp  timer.cpp
libraries/network/src/linux/: epoll_reactor.cpp  socket_linux.cpp
libraries/network/src/windows/: select_reactor.cpp  socket_windows.cpp
projects/: CMakeLists.txt
projects/examples/: example_helper.h  example_http_server.cpp  example_tcp_client.cpp  example_tcp_server.cpp  example_udp_client.cpp  example_udp_server.cpp
socket_server/: common.h  s_socket.cpp  socket_address.cpp  test.cpp
socket_server/common/: utils.h
socket_server/include/: s_socket.h  socket_address.h
src/: address.cpp  connection_data.cpp  select_reactor.cpp  socket.cpp  test_app.cpp
src/examples/: example_tcp_client.cpp  example_tcp_server.cpp
src/linux/: epoll_reactor.cpp  socket_linux.cpp
src/platform/linux/: reactor.cpp
src/windows/: select_reactor.cpp  socket_windows.cpp
test/: CMakeLists.txt  main.cpp  test_socket.cpp
tests/: CMakeLists.txt  main.cpp
tests/http/: test_http_parser.cpp
tests/network/: test_socket.cpp  test_timer.cpp
